--- a/src/provider/docker-compose.yml
+++ b/src/provider/docker-compose.yml
@@ -52,11 +52,11 @@ services:
       - "./data-exchange/swagger_server/:/usr/src/app/swagger_server/:ro"
     environment:
       - "LC_CTYPE=C.UTF-8"
-  provider-certification-authorization:
-    build: certification-authorization
-    image: provider/certification-authorization:1.1
-    hostname: provider_certification_authorization
-    container_name: provider_certification_authorization
+  provider-authentication-authorization:
+    build: authentication-authorization
+    image: provider/authentication-authorization:1.1
+    hostname: provider_authentication_authorization
+    container_name: provider_authentication_authorization
     restart: always
     logging:
       driver: "json-file" # defaults if not specified
@@ -65,14 +65,14 @@ services:
         max-file: "10"
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
-      - "./certification-authorization/swagger_server/:/usr/src/app/swagger_server/:ro"
+      - "./authentication-authorization/swagger_server/:/usr/src/app/swagger_server/:ro"
     environment:
       - "LC_CTYPE=C.UTF-8"
-  provider-provenance-management-call:
-    build: provenance-management-call
-    image: provider/provenance-management-call:1.1
-    hostname: provider_provenance_management_call
-    container_name: provider_provenance_management_call
+  provider-provenance-management:
+    build: provenance-management
+    image: provider/provenance-management:1.1
+    hostname: provider_provenance_management
+    container_name: provider_provenance_management
     restart: always
     logging:
       driver: "json-file" # defaults if not specified
@@ -81,6 +81,6 @@ services:
         max-file: "10"
     volumes:
       - "/etc/localtime:/etc/localtime:ro"
-      - "./provenance-management-call/swagger_server/:/usr/src/app/swagger_server/:ro"
+      - "./provenance-management/swagger_server/:/usr/src/app/swagger_server/:ro"
     environment:
       - "LC_CTYPE=C.UTF-8"
