--- a/src/consumer/squid/docker-compose_initial.yml
+++ b/src/consumer/squid/docker-compose_initial.yml
@@ -3,7 +3,7 @@ services:
   squid:
     container_name: forward-proxy
     build: .
-    image: cadde-squid
+    image: cadde-squid:4.0.0
     ports:
       - "3128:3128"
     volumes:
