2023年1月フィードバック 利用者コネクタ：認証トークン取得削除・リバースプロキシ追加・証明書設定周り修正、提供者コネクタ：認可トークン検証削除・データ取得時のCKAN検索設定追加、その他軽微な修正

--- a/src/consumer/.env
+++ b/src/consumer/.env
@@ -1,3 +1,3 @@
 LC_CTYPE=C.UTF-8
-REQUESTS_CA_BUNDLE=/etc/docker/certs.d/XXX
-HTTPS_PROXY_CADDE=XXX
+REQUESTS_CA_BUNDLE=/etc/docker/certs.d/squidCA.pem
+HTTPS_PROXY_CADDE=forward_proxy:3128
