--- a/src/provider/nginx/volumes/nginx.conf
+++ b/src/provider/nginx/volumes/nginx.conf
@@ -11,6 +11,7 @@ events {
 
 
 http {
+    server_tokens       off;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
