利用者コネクタ：リバースプロキシ設定修正

--- a/src/consumer/nginx/volumes/default.conf
+++ b/src/consumer/nginx/volumes/default.conf
@@ -7,6 +7,10 @@ server {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/file;
     }
 
+    location /cadde/api/v4/entities {
+        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/entities;
+    }
+
     location /cadde/api/v4/catalog {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/catalog;
     }
