--- a/src/consumer/nginx/volumes/default.conf
+++ b/src/consumer/nginx/volumes/default.conf
@@ -5,14 +5,35 @@ server {
 
     location /cadde/api/v4/file {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/file;
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header Referrer-Policy no-referrer always;
+        add_header Strict-Transport-Security "max-age=31536000";
+        add_header Cache-Control no-store;
+        add_header Pragma no-cache;
     }
 
     location /cadde/api/v4/entities {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/entities;
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header Referrer-Policy no-referrer always;
+        add_header Strict-Transport-Security "max-age=31536000";
+        add_header Cache-Control no-store;
+        add_header Pragma no-cache;
     }
 
     location /cadde/api/v4/catalog {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/catalog;
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header Referrer-Policy no-referrer always;
+        add_header Strict-Transport-Security "max-age=31536000";
+        add_header Cache-Control no-store;
+        add_header Pragma no-cache;
     }
 }
 
@@ -35,10 +56,35 @@ server {
 #    # }
 #    location /cadde/api/v4/file {
 #        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/file;
+#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+#        add_header X-Content-Type-Options nosniff;
+#        add_header X-XSS-Protection "1; mode=block";
+#        add_header Referrer-Policy no-referrer always;
+#        add_header Strict-Transport-Security "max-age=31536000";
+#        add_header Cache-Control no-store;
+#        add_header Pragma no-cache;
+#    }
+#
+#    location /cadde/api/v4/file {
+#        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/entities;
+#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+#        add_header X-Content-Type-Options nosniff;
+#        add_header X-XSS-Protection "1; mode=block";
+#        add_header Referrer-Policy no-referrer always;
+#        add_header Strict-Transport-Security "max-age=31536000";
+#        add_header Cache-Control no-store;
+#        add_header Pragma no-cache;
 #    }
 #
 #    location /cadde/api/v4/catalog {
 #        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/catalog;
+#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+#        add_header X-Content-Type-Options nosniff;
+#        add_header X-XSS-Protection "1; mode=block";
+#        add_header Referrer-Policy no-referrer always;
+#        add_header Strict-Transport-Security "max-age=31536000";
+#        add_header Cache-Control no-store;
+#        add_header Pragma no-cache;
 #    }
 #    error_page  404              /404.html;
 #    location = /40x.html {
@@ -74,4 +120,5 @@ server {
 #    #    deny  all;
 #    #}
 #}
+
 
