--- a/src/consumer/nginx/volumes/default.conf
+++ b/src/consumer/nginx/volumes/default.conf
@@ -5,7 +5,7 @@ server {
 
     location /cadde/api/v4/file {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/file;
-        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy no-referrer always;
@@ -16,7 +16,7 @@ server {
 
     location /cadde/api/v4/entities {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/entities;
-        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy no-referrer always;
@@ -27,7 +27,7 @@ server {
 
     location /cadde/api/v4/catalog {
         proxy_pass http://consumer_connector_main:8080/cadde/api/v4/catalog;
-        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy no-referrer always;
@@ -56,7 +56,7 @@ server {
 #    # }
 #    location /cadde/api/v4/file {
 #        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/file;
-#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
 #        add_header X-Content-Type-Options nosniff;
 #        add_header X-XSS-Protection "1; mode=block";
 #        add_header Referrer-Policy no-referrer always;
@@ -67,7 +67,7 @@ server {
 #
 #    location /cadde/api/v4/file {
 #        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/entities;
-#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
 #        add_header X-Content-Type-Options nosniff;
 #        add_header X-XSS-Protection "1; mode=block";
 #        add_header Referrer-Policy no-referrer always;
@@ -78,7 +78,7 @@ server {
 #
 #    location /cadde/api/v4/catalog {
 #        proxy_pass http://consumer_connector_main:8080/cadde/api/v4/catalog;
-#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+#        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
 #        add_header X-Content-Type-Options nosniff;
 #        add_header X-XSS-Protection "1; mode=block";
 #        add_header Referrer-Policy no-referrer always;
