--- a/src/provider/nginx/volumes/default.conf
+++ b/src/provider/nginx/volumes/default.conf
@@ -24,7 +24,7 @@ server{
 
     location /cadde/api/v4/authorization {
         proxy_pass http://authz_nginx/cadde/api/v4/authorization;
-        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy no-referrer always;
@@ -35,7 +35,7 @@ server{
 
     location /cadde/api/v4/file {
         proxy_pass http://provider_data_exchange:8080/cadde/api/v4/file;
-        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy no-referrer always;
@@ -46,7 +46,7 @@ server{
 
     location /cadde/api/v4/catalog {
         proxy_pass http://provider_catalog_search:8080/cadde/api/v4/catalog;
-        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'self'; style-src 'self'";
+        add_header Content-Security-Policy "default-src 'self'; frame-ancestors 'self'; object-src 'self'; script-src 'none'; style-src 'none'";
         add_header X-Content-Type-Options nosniff;
         add_header X-XSS-Protection "1; mode=block";
         add_header Referrer-Policy no-referrer always;
@@ -54,7 +54,6 @@ server{
         add_header Cache-Control no-store;
         add_header Pragma no-cache;
     }
-
     error_page  404              /404.html;
     location = /40x.html {
     }
@@ -89,4 +88,5 @@ server{
     #    deny  all;
     #}
 }
+
 
