リソースURLの制限事項記載。コンフィグのURLの末尾スラッシュ対応。不要ファイル削除。その他軽微な修正

--- a/src/consumer/docker-compose.yml
+++ b/src/consumer/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - LC_CTYPE=${LC_CTYPE}
       - REQUESTS_CA_BUNDLE=${REQUESTS_CA_BUNDLE}
       - HTTPS_PROXY=${HTTPS_PROXY_CADDE}
-  authentication:
+  consumer-authentication:
     build: authentication
     image: consumer/authentication:4.0.0
     hostname: consumer_authentication
@@ -76,7 +76,7 @@ services:
       - LC_CTYPE=${LC_CTYPE}
       - REQUESTS_CA_BUNDLE=${REQUESTS_CA_BUNDLE}
       - HTTPS_PROXY=${HTTPS_PROXY_CADDE}
-  provenance-management:
+  consumer-provenance-management:
     build: provenance-management
     image: consumer/provenance-management:4.0.0
     hostname: consumer_provenance_management
