--- a/src/consumer/docker-compose_noreverseproxy.yml
+++ b/src/consumer/docker-compose_noreverseproxy.yml
@@ -35,7 +35,7 @@ services:
       - "./connector-main/swagger_server/:/usr/src/app/swagger_server/:ro"
       - "./squid/volumes/ssl/:/etc/docker/certs.d/:ro"
     ports:
-      - 10080:8080
+      - 80:8080
     environment:
       - LC_CTYPE=${LC_CTYPE}
       - REQUESTS_CA_BUNDLE=${REQUESTS_CA_BUNDLE}
@@ -97,20 +97,12 @@ services:
       - LC_CTYPE=${LC_CTYPE}
       - REQUESTS_CA_BUNDLE=${REQUESTS_CA_BUNDLE}
       - HTTPS_PROXY=${HTTPS_PROXY_CADDE}
-  squid:
-    container_name: forward-proxy
+  consumer-forward-proxy:
+    container_name: consumer_forward-proxy
     image: cadde-squid:4.0.0
     hostname: forward_proxy
     volumes:
       - ./squid/volumes/squid.conf:/etc/squid/conf.d/default.conf
       - ./squid/volumes/ssl:/etc/squid/ssl
       - ./squid/volumes/ssl_db:/var/lib/squid/ssl_db
-    restart: always
-  reverse-proxy:
-    container_name: reverse-proxy
-    image: nginx:1.23.1
-    volumes:
-      - ./nginx/volumes/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/volumes/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/volumes/ssl:/etc/nginx/ssl
     restart: always
