--- a/src/provider/docker-compose.yml
+++ b/src/provider/docker-compose.yml
@@ -80,8 +80,8 @@ services:
       - "./provenance-management/swagger_server/:/usr/src/app/swagger_server/:ro"
     environment:
       - "LC_CTYPE=C.UTF-8"
-  reverse-proxy:
-    container_name: reverse-proxy
+  provider-reverse-proxy:
+    container_name: provider_reverse-proxy
     image: nginx:1.23.1
     volumes:
       - ./nginx/volumes/nginx.conf:/etc/nginx/nginx.conf
